--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@vue/cli-service": "^3.0.5",
     "node-sass": "^4.9.4",
     "sass-loader": "^7.1.0",
+    "style-resources-loader": "^1.2.1",
+    "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
