--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fortawesome/vue-fontawesome": "^0.1.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-map-fields": "^1.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
